# core/views/api.py
@@ -16,19 +16,21 @@ class MeViewSet(ModelViewSet):
     def get_object(self):
         return self.request.user
 
+
 class DistinctOrganizationViewSet(ModelViewSet):
     serializer_class = serializers.OrganizationSerializer
-    lookup_field = 'name'
+    lookup_field = "name"
 
     def get_queryset(self):
-        return models.Organization.objects.all().values('name')
-    
+        return models.Organization.objects.all().values("name")
+
     def retrieve(self, request, *args, **kwargs):
         try:
             self.get_object()
             return Response(True)
-        except:
+        except Exception as e:
             return Response(False)
+
 
 class OrganizationViewSet(ModelViewSet, mixins.UserOganizationMixin):
     serializer_class = serializers.OrganizationSerializer
